# RAG-computer-vision-ii

./: Makefile  README.md  pyproject.toml
data/: corpus_index.json  indexed_registry.json
data/documents/: chapter_1.tex  chapter_2.tex  chapter_3.tex  chapter_4.tex  chapter_5.tex
src/: chatbot.py  config.py  embed_documents.py  frontend.py  rag_dashboard.py  save_docs_to_db.py  template_function.py  utils.py
src/chatbot/: clients.py  generate.py  rag.py
src/embed_documents/: base_processor.py  main.py  pdf_processor.py  save_files.py  tex_processor.py
src/frontend/: index.html
tests/: test_chatbot.py  test_save_docs_to_db.py  test_template.py  test_utils.py
tests/chatbot/: test_clients.py  test_generate.py  test_rag.py
tests/embed_documents/: test_base_processor.py  test_pdf_processor.py  test_save_files.py  test_tex_processor.py
tests/ragas/: eval_dataset.json  evaluate.py  results.json
