[project]
name = "RAG-computer-vision-ii"
version = "0.1.0"
description = "RAG for my Computer Vision II students to ask if they have doubts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "black==24.10.0",
    "ruff==0.8.4",
    "pylint==3.3.2",
    "flake8==7.1.1",
    "flake8-pyproject>=1.2.3",
    "mypy==1.13.0",
    "complexipy==1.2.0",
    "isort==5.13.2",
    "bandit>=1.9.4",
    "fitz>=0.0.1.dev2",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "pinecone>=8.1.0",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "ipykernel>=7.2.0",
    "pymupdf>=1.27.2.2",
    "google-genai>=1.68.0",
    "streamlit>=1.55.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.mypy]
# cache_dir = "/dev/null"
# check_untyped_defs = true
# ignore_missing_imports = true
# exclude = "build/"

[[tool.mypy.overrides]]
module = [
    "fitz.*",
    "fastapi.*",
    "google.*"
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W293", "E402"]

[tool.pylint."MESSAGES CONTROL"]
# disable = [
#     "R0801", "R0912", "R0913", "R0914", "R0915", "R0917", "R1711", "R1732"
# ]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "run: mark the order of the test."
]
addopts = "--cov src"

[tool.coverage.run]
omit = ["src/main.py"]

[tool.isort]
profile = "black"
lines_after_imports = 2
